unpackaged/main/default/objects/Onboarding_Project_c__c/Onboarding_Project_c__c.object-meta.xml
<CustomObject>
    <label>Onboarding Project</label>
    <nameField>
        <label>Onboarding Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>