unpackaged/main/default/objects/Onboarding_Project_c__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Onboarding Projects</relationshipLabel>
    <relationshipName>Onboarding_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>