unpackaged/main/default/objects/Onboarding_Project_c__c/fields/Overall_Risk__c.field-meta.xml
<CustomField>
    <fullName>Overall_Risk__c</fullName>
    <label>Overall Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>